[gd_scene load_steps=15 format=3 uid="uid://b04cv77uphj6q"]

[ext_resource type="Theme" uid="uid://ctskjtcxq00rk" path="res://scenes/ui/game_ui_theme.tres" id="1_un725"]
[ext_resource type="Texture2D" uid="uid://bsyel2u72eoih" path="res://art/ui/axe.png" id="2_0m1id"]
[ext_resource type="Script" path="res://scenes/ui/tools_panel.gd" id="2_5db8e"]
[ext_resource type="Texture2D" uid="uid://byryqvffut2yv" path="res://art/ui/water.png" id="3_iprvf"]
[ext_resource type="Texture2D" uid="uid://cr4q2blib2dwj" path="res://art/ui/pickaxe.png" id="4_hq8ps"]
[ext_resource type="Texture2D" uid="uid://bv360oadumk54" path="res://art/ui/rod.png" id="5_pdrxw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xsndr"]
atlas = ExtResource("2_0m1id")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rlxvj"]
load_path = "res://.godot/imported/shovel.png-baeb9851b1b67ed6fd7087da4490094a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_wxk6j"]
atlas = SubResource("CompressedTexture2D_rlxvj")

[sub_resource type="AtlasTexture" id="AtlasTexture_6e34u"]
atlas = ExtResource("3_iprvf")

[sub_resource type="AtlasTexture" id="AtlasTexture_dd5k1"]
atlas = ExtResource("4_hq8ps")

[sub_resource type="AtlasTexture" id="AtlasTexture_qftkf"]
atlas = ExtResource("5_pdrxw")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8yswv"]
load_path = "res://.godot/imported/hammer.png-9f4bba928302a5e5405f08a183ca4d49.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ptfx7"]
atlas = SubResource("CompressedTexture2D_8yswv")

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 170.0
offset_bottom = 50.0
theme = ExtResource("1_un725")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_5db8e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_xsndr")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_wxk6j")
icon_alignment = 1

[node name="ToolWateringCan" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_6e34u")
icon_alignment = 1

[node name="ToolPickaxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_dd5k1")
icon_alignment = 1

[node name="ToolRod" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_qftkf")
icon_alignment = 1

[node name="ToolHammer" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_ptfx7")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolWateringCan" to="." method="_on_tool_watering_can_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolPickaxe" to="." method="_on_tool_pickaxe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolRod" to="." method="_on_tool_rod_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolHammer" to="." method="_on_tool_hammer_pressed"]
